fixed overflow text problem

--- a/frontend/src/components/AlbumsAll/GetAlbum.css
+++ b/frontend/src/components/AlbumsAll/GetAlbum.css
@@ -1,6 +1,6 @@
 .album-tiles {
-    /* width: 150px;
-    height: 150px; */
+    width: 13em;
+    /* height: 150px; */
     border-radius: 3px;
     background-size: contain;
     list-style-type: none;
@@ -38,4 +38,11 @@
 ul {
     margin: 0px;
     padding: 0px;
+}
+
+.overflow-title-div {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: normal;
 }
